# asm-backend-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: cli.py  main.py
app/api/v1/: assets.py  auth.py  domains.py  health.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  asset.py  base.py  domain.py  enums.py  event_log.py  scan.py  user.py
app/repositories/: asset_repository.py  domain_repository.py  scan_repository.py  user_repository.py
app/schemas/: asset.py  auth.py  domain.py  health.py  scan.py  user.py
app/services/: asset_service.py  audit_service.py  auth_service.py  domain_service.py  scan_service.py
app/tests/: test_assets.py  test_dns_resolver.py  test_domains.py  test_health.py  test_security.py
app/workers/: celery_app.py  dns_resolver.py  tasks.py
migrations/: env.py
migrations/versions/: 8603d86f999e_create_initial_schema.py  bdc939085501_add_event_logs_table.py
tests/: conftest.py  test_assets.py  test_auth.py  test_domains.py  test_health.py  test_scans.py
